--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Wang Chao",
   "license": "ISC",
   "dependencies": {
+    "eventemitter2": "^1.0.2",
     "open": "0.0.5",
     "request": "^2.69.0"
   }
