--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "eventemitter2": "^1.0.2",
+    "log": "^1.4.0",
     "open": "0.0.5",
     "request": "^2.69.0"
   }
