--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eventemitter2": "^1.0.2",
     "log": "^1.4.0",
     "open": "0.0.5",
+    "qrcode-terminal": "^0.10.0",
     "request": "^2.69.0"
   }
 }
